--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,5 +1,5 @@
 global:
-  scrape_interval:     15s # By default, scrape targets every 15 seconds.
+  scrape_interval: 15s # By default, scrape targets every 15 seconds.
 
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
@@ -10,18 +10,18 @@ global:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: 'spring-actuator'
+  - job_name: 'core-api'
 
     # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 15s
 
     static_configs:
-      - targets: ['https://core-api-staging-f4aa.up.railway.app/actuator/prometheus']
+      - targets: ['core-api.railway.internal/actuator/prometheus']
 
-  # - job_name: 'postgres'
-  #   scrape_interval: 5s
-  #   static_configs:
-  #     - targets: ['localhost:9187']
+  - job_name: 'postgres'
+     scrape_interval: 5s
+     static_configs:
+       - targets: ['postgres.railway.internal:5432']
 
   # - job_name: 'mysql'
   #   scrape_interval: 5s
