--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,29 +1,15 @@
 global:
-  scrape_interval: 15s # By default, scrape targets every 15 seconds.
-
-  # Attach these labels to any time series or alerts when communicating with
-  # external systems (federation, remote storage, Alertmanager).
+  scrape_interval: 15s
   external_labels:
-    monitor: 'railway-prom'
-
-# A scrape configuration containing exactly one endpoint to scrape:
-# Here it's Prometheus itself.
+    monitor: railway-prom
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: 'core-api'
-
-    # Override the global default and scrape targets from this job every 5 seconds.
+  - job_name: core-api
     scrape_interval: 15s
-
     static_configs:
-      - targets: ['core-api.railway.internal/actuator/prometheus']
-
-  - job_name: 'postgres'
-     scrape_interval: 5s
-     static_configs:
-       - targets: ['postgres.railway.internal:5432']
-
-  # - job_name: 'mysql'
-  #   scrape_interval: 5s
-  #   static_configs:
-  #     - targets: ['localhost:9104']
+      - targets:
+          - 'core-api.railway.internal/actuator/prometheus/'
+  - job_name: postgres
+    scrape_interval: 5s
+    static_configs:
+      - targets:
+          - 'postgres.railway.internal:5432'
