--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,8 +6,9 @@ global:
 scrape_configs:
   - job_name: 'core-api'
     scrape_interval: 15s
+    metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['core-api.railway.internal/actuator/prometheus']
+      - targets: ['core-api.railway.internal:80']
 
   - job_name: 'postgres'
     scrape_interval: 5s
