--- a/prometheus.yml
+++ b/prometheus.yml
@@ -8,7 +8,7 @@ scrape_configs:
     scrape_interval: 15s
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['core-api.railway.internal::8080']
+      - targets: ['core-api.railway.internal:8080']
 
   - job_name: 'postgres'
     scrape_interval: 5s
